Bug 83292 - UI: Add Catalan (Valencian) document language
Summary: UI: Add Catalan (Valencian) document language
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-31 06:34 UTC by Pau Iranzo
Modified: 2014-12-20 23:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pau Iranzo 2014-08-31 06:34:19 UTC
Problem description: Since the Catalan (Valencian) translation is available for LibreOffice, we have used the 'catalan' as document language. We would like to add "Catalan (Valencian)" as document language (it would just be a copy of the Catalan document language).

Steps to reproduce:
1. Go to Tools » Options » Locale configuration » Languages
2. Check the languages list on the 'Default languages for documents section' 

Current behavior: Only 'Catalan' is available

Expected behavior: Add 'Catalan (Valencian)'

              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 A (Andy) 2014-08-31 08:04:40 UTC
reproducible also with LO 4.3.1.2. (Win 8.1)

Catalan (Valencian) is not listed in the top-down list DEFAULT LANGUAGES FOR DOCUMENTS -> WESTERN under TOOLS -> OPTIONS -> LANGUAGE SETTINGS -> LANGUAGES
Comment 2 Julien Nabet 2014-08-31 19:31:21 UTC
On pc Debian x86-64 with master sources updated today + this on autogen.input:
--with-lang=ALL, I could reproduce this.

Andras: one for you?
Comment 3 Andras Timar 2014-10-02 21:07:32 UTC
I hope I did it right. https://gerrit.libreoffice.org/#/c/11776/
Comment 5 Mike §chinagl 2014-12-20 23:08:46 UTC
This bug fix comes with LibreOffice 4.4 (release notes https://wiki.documentfoundation.org/ReleaseNotes/4.4) 

Added Catalan Valencian [ca-ES-valencia] locale data.