fdo#83292 add stub locale data for Catalan (Valencian)

Change-Id: I569d203178668a2d63f4a53baca51ac16bf2361a
Reviewed-on: https://gerrit.libreoffice.org/11776
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 99fa3b7df7c97b7adc97092baf3f147e165d8576)